@@ -281,3 +281,4 @@ suggestions:
   David Badura
   James Dietrich
   JDufault
+  Simon Michael
